--- a/src/assets/CSS/global.css
+++ b/src/assets/CSS/global.css
@@ -13,3 +13,28 @@ body,
     size: 16px;
     font-weight: bold;
 }
+/* 侧边栏取消双击选中文字 */
+.el-aside {
+    -moz-user-select: none; /*火狐*/
+    -webkit-user-select: none; /*webkit浏览器*/
+    -ms-user-select: none; /*IE10*/
+    -khtml-user-select: none; /*早期浏览器*/
+    user-select: none;
+}
+/* 卡片视图 */
+.el-breadcrumb{
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+/* 表格区域 */
+.el-table {
+    margin-top: 15px;
+    font-size: 12px;
+}
+/* 分页区域 */
+.el-pagination{
+    margin-top: 15px;
+}
