--- a/src/assets/CSS/global.css
+++ b/src/assets/CSS/global.css
@@ -5,7 +5,7 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+    min-width: 1366px;
 }
 /* 设置验证规则提示 */
 .el-form-item__error{
